--- a/main.html
+++ b/main.html
@@ -27,11 +27,10 @@
       <div class="card-header">
         Alert
       </div>
-      <div class="card-body1">
+      <div class="card-body">
         <h5 class="card-title">Node Dead</h5>
         <p class="card-text">Node 5 (east-us) is offline for the last 12 days.</p>
-        <p class="card-text"><small class="text">Last updated 12 days ago</small></p>
-		  <img src="https://storage.googleapis.com/acciojob-open-file-collections/49d3ed5d-15df-49ba-8c0a-70b454b5e3d1_Screenshot%202023-08-08%20at%203.46.43%20AM.png">
+        <p class="card-text"><small class="text-muted">Last updated 12 mins ago</small></p>
       </div>
     </div>
   </div>
@@ -45,7 +44,7 @@
       <div class="card-body">
         <h5 class="card-title">President under Pressure</h5>
         <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
-        <p class="card-text"><small class="text-muted">Last updated 12 days ago</small></p>
+        <p class="card-text"><small class="text-muted">Last updated 12 mins ago</small></p>
       </div>
     </div>
   </div>
@@ -56,3 +55,4 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
