--- a/main.html
+++ b/main.html
@@ -3,56 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap Card Example</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <title>Image Display</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f0f0f0;
+    }
+    
+    img {
+      max-width: 100%;
+      max-height: 100%;
+    }
+  </style>
 </head>
 <body>
 
-<div class="container">
-  <div class="card-deck">
-    <!-- First Card -->
-    <div class="card bg-light">
-      <div class="card-header">
-        Welcome to Sync5
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">New Features</h5>
-        <p class="card-text">Mobile and Tablet support. With this new update you will be able to sync your work across a large number of platforms.</p>
-        <a href="#" class="btn btn-primary">Read more</a>
-      </div>
-    </div>
+<img src="https://storage.googleapis.com/acciojob-open-file-collections/49d3ed5d-15df-49ba-8c0a-70b454b5e3d1_Screenshot%202023-08-08%20at%203.46.43%20AM.png" alt="Example Image">
 
-    <!-- Second Card -->
-    <div class="card bg-light">
-      <div class="card-header">
-        Alert
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">Node Dead</h5>
-        <p class="card-text">Node 5 (east-us) is offline for the last 12 days.</p>
-        <p class="card-text"><small class="text-muted">Last updated 12 mins ago</small></p>
-      </div>
-    </div>
-  </div>
-
-  <div class="card-deck mt-4">
-    <!-- Third Card -->
-    <div class="card bg-light">
-      <div class="card-header">
-        President under Pressure
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">President under Pressure</h5>
-        <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
-        <p class="card-text"><small class="text-muted">Last updated 12 mins ago</small></p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
 
