--- a/main.html
+++ b/main.html
@@ -15,13 +15,14 @@
 <div class="container">
   <div class="card-deck">
     <!-- First Card -->
+	  <h1> Welcome to Sync5</h1>
     <div class="card bg-light">
       <div class="card-header">
-        Welcome to Sync5
+       New Feather 
       </div>
       <div class="card-body">
-        <h5 class="card-title">New Features</h5>
-        <p class="card-text">Mobile and Tablet support. With this new update you will be able to sync your work across a large number of platforms.</p>
+        <h5 class="card-title">Mobile and Tablet support.</h5>
+        <p class="card-text"> With this new update you will be able to sync your work across a large number of platforms.</p>
         <a href="#" class="btn btn-primary">Read more</a>
       </div>
     </div>
@@ -36,23 +37,16 @@
         <p class="card-text">Node 5 (east-us) is offline for the last 12 days.</p>
         <p class="card-text"><small class="text-muted">Last updated 12 mins ago</small></p>
   </div>
-		<div>
-			 <img src="https://images.unsplash.com/photo-1530053969600-caed2596d242?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW4lMjBiYWNrZ3JvdW5kfGVufDB8fDB8fHww" alt="Example Image">
-		</div>
+		
     </div>
-  </div>
-
-  <div class="card-deck mt-4">
-    <!-- Third Card -->
-    <div class="card bg-light">
-      <div class="card-header">
-        President under Pressure
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">President under Pressure</h5>
-        <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
-        <p class="card-text"><small class="text-muted">Last updated 12 mins ago</small></p>
-     
+  </div> 
+</div>
+	<div>
+		<img src="https://images.unsplash.com/photo-1530053969600-caed2596d242?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW4lMjBiYWNrZ3JvdW5kfGVufDB8fDB8fHww" alt="Example Image">
+        <h5 >President under Pressure</h5>
+        <p >The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
+        <p ><small class="text-muted">Last updated 12 mins ago</small></p>
+     </div>
 	  </div>
     </div>
   </div>
