--- a/main.html
+++ b/main.html
@@ -45,7 +45,8 @@
         <p >The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
         <p ><small class="text-muted">Last updated 12 mins ago</small></p>
      </div>
-	  
+</div>
+	</div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
