--- a/main.html
+++ b/main.html
@@ -38,14 +38,15 @@
       <div class="card-body">
         <h5 class="card-title">Node Dead</h5>
         <p class="card-text">Node 5 (east-us) is offline for the last 12 days.</p>
-        <p class="card-text">Last updated 12 days ago</small></p>
-       
+        <p class="card-text">Last updated 12 days ago</p>
       </div>
     </div>
 
     <!-- Third Card -->
     <div class="card bg-light">
-     <img src="https://images.unsplash.com/photo-1530053969600-caed2596d242?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW4lMjBiYWNrZ3JvdW5kfGVufDB8fDB8fHww" alt="Example Image">
+      <div class="card-header">
+        <img src="https://images.unsplash.com/photo-1530053969600-caed2596d242?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW4lMjBiYWNrZ3JvdW5kfGVufDB8fDB8fHww" alt="Example Image">
+      </div>
       <div class="card-body">
         <h5 class="card-title">President under Pressure</h5>
         <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
