--- a/main.html
+++ b/main.html
@@ -6,11 +6,7 @@
   <title>Bootstrap Card Example</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    .card img {
-      max-width: 100%; 
-      height: auto; 
-      display: block; 
-    }
+    
   </style>
 </head>
 <body>
@@ -35,7 +31,7 @@
       <div class="card-header">
         Alert
       </div>
-      <div class="card-body">
+      <div class="cardbox">
         <h5 class="card-title">Node Dead</h5>
         <p class="card-text">Node 5 (east-us) is offline for the last 12 days.</p>
         <p class="card-text">Last updated 12 days ago</p>
