--- a/main.html
+++ b/main.html
@@ -1,60 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap Card Example</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap Card Deck</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
 
-<div class="container">
-  <div class="card-deck">
-    <!-- First Card -->
-    <h1> Welcome to Sync5</h1>
-    <div class="card bg-light">
-      <div class="card-header">
-       New Features
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">Mobile and Tablet support.</h5>
-        <p class="card-text"> With this new update you will be able to sync your work across a large number of platforms.</p>
-        <a href="#" class="btn btn-primary">Read more</a>
-      </div>
-    </div>
+<div class="container mt-5">
+    <div class="card-deck">
+        <!-- Card 1 -->
+        <div class="card bg-light">
+            <img src="https://via.placeholder.com/150" class="card-img-top" alt="Card image cap"> <!-- Example image -->
+            <div class="card-header">Welcome to Sync5</div>
+            <div class="card-body">
+                <h5 class="card-title">New Features</h5>
+                <p class="card-text">Mobile and Tablet support. With this new update you will be able to sync your work across a large number of platforms.</p>
+                <a href="#" class="btn btn-primary">Read more</a>
+            </div>
+            <div class="card-footer text-muted">Last updated 12 mins ago</div>
+        </div>
 
-    <!-- Second Card -->
-    <div class="card bg-light">
-      <div class="card-header">
-        Alert
-      </div>
-      <div class="cardbox">
-        <h5 class="card-title">Node Dead</h5>
-        <p class="card-text">Node 5 (east-us) is offline for the last 12 days.</p>
-        <p class="card-text">Last updated 12 days ago</p>
-      </div>
+        <!-- Card 2 -->
+        <div class="card bg-light bg-danger"> <!-- Added bg-danger class -->
+            <div class="card-header">Alert</div>
+            <div class="card-body">
+                <h5 class="card-title">Node Dead</h5>
+                <p class="card-text">Node 5 (east-us) is offline for the last 12 days.</p>
+            </div>
+            <div class="card-footer text-muted">Last updated 12 mins ago</div>
+        </div>
     </div>
-
-    <!-- Third Card -->
-    <div class="card bg-light">
-      <div class="card-header">
-        <img src="https://images.unsplash.com/photo-1530053969600-caed2596d242?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW4lMjBiYWNrZ3JvdW5kfGVufDB8fDB8fHww" alt="Example Image">
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">President under Pressure</h5>
-        <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
-        <p class="card-text"><small class="text-muted">Last updated 12 mins ago</small></p>
-      </div>
-    </div>
-  </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!-- Bootstrap JS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
 </html>
 
